* Thu 25 Jun 2009 17:31:02 CEST
Fixed a major bug that resulted in data corruption;
MAPI implementation code cleanup and bug fixes;
Support to ruby 1.9;
Both the standalone driver and activerecord now support transactions; nested transactions
are simulated via savepoints in activerecord.
Added a Rakefile and script to run activerecord unit test suite.
Type conversion in the standalone driver is now performed after data has been retrieved and can be executed on single fields.

* Mon 25 May 2009 17:52:01 CEST
Imported last week changes (protocol 9 support, parametrized the connection options in the activerecord adapter, fixed a bug in the auth protocol v8).
Fixed a bug in the mapi protocol that resulted in data loss (wrong handling of TRANSACTIONS).
Began to port the activerecord test suite to monetdb (not all test cases can be performed).
Removed an unneeded file ('lib/MonetDBStatement.rb') from the gemspec of the standalone driver (the feature will be moved to HEAD).
Began to port the driver to ruby 1.9.
Removed *.gem files from cvs.

* Mon 18 May 2009 15:22:31 CEST
Fixed bugs that prevented the correct working of activerecords' migration;
The activerecord connector now supports insertion, update and alter table operations;
Type casting is working in activerecord;
Added a rubygem and rakefile for activerecord-monetdb-adapter;
Added a new usage example for activerecord to the README file;
Added an example directory to the cvs tree;
The driver now correctly works with merovingian.


* Sat  9 May 2009 15:58:36 CEST
Fixed bugs with the query processing in the standalone driver;
Added INSERT and UPDATE methods in the activerecord connector.

* Thu  7 May 2009 17:03:01 CEST

Added a check against the protocol version during authentication;
Imported the activerecord code (available under adapter/).